Flex applied to the page's CSS. Background colors added to make this change apparent.
Page elements justified to appear similar to provided design, however no padding added yet. Created links to nav section in index.html. More styling to come soon.

--- a/index.html
+++ b/index.html
@@ -7,17 +7,15 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     </head>
 
-    <body class="landing">
+    <body>
         <div class="header">
             <div class="nav">
                 <div class="logo">Header Logo</div>
-                <div class="links">
-                    <ul>
-                        <li>header link one</li>
-                        <li>header link two</li>
-                        <li>header link three</li>
+                    <ul class="links">
+                        <li><a href="#">header link one</a></li>
+                        <li><a href="#">header link two</a></li>
+                        <li><a href="#">header link three</a></li>
                     </ul>
-                </div>
             </div>
             <div class="low-header">
                 <div class="signup">
