--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Awesome Landing Page</title>
         <link rel="stylesheet" href="./style.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
     </head>
 
     <body>
