--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     </ul>
             </div>
             <div class="low-header">
-                <div class="signup">
+                <div class="left-header">
                     <div class="awesome">This website is awesome</div>
                     <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
                     <button class="signup1">Sign up</button>
@@ -33,19 +33,19 @@
                 <div class="random-squares">
                     <div class="item1">
                         <div class="square"></div>
-                        <div>this is some subtext under an illustration or image</div>
+                        <div class="centertext">this is some subtext under an illustration or image</div>
                     </div>
                     <div class="item2">
                         <div class="square"></div>
-                        <div>this is some subtext under an illustration or image</div>
+                        <div class="centertext">this is some subtext under an illustration or image</div>
                     </div>
                     <div class="item3">
                         <div class="square"></div>
-                        <div>this is some subtext under an illustration or image</div>
+                        <div class="centertext">this is some subtext under an illustration or image</div>
                     </div>
                     <div class="item4">
                         <div class="square"></div>
-                        <div>this is some subtext under an illustration or image</div>
+                        <div class="centertext">this is some subtext under an illustration or image</div>
                     </div>
                 </div>
             </div>
